# dz_20_1

./: .gitignore  README.md  data.json  dump.rdb  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_preview.py  0003_alter_blog_options.py
blog/templates/blog/: base.html  blog.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_published.html
blog/templates/blog/includes/: inc_blog.html
blog/templatetags/: my_tags_blog.py
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_version.py  0003_alter_version_options_alter_version_name.py  0004_product_owner.py  0005_remove_product_owner.py  0006_product_owner.py  0007_product_is_published.py
catalog/templates/: delete_product.html  update_product.html
catalog/templates/catalog/: base.html  contact_info.html  contacts.html  create_category.html  create_product.html  index.html  product_detail.html  product_list.html  products.html  start_form.html
catalog/templates/catalog/includes/: inc_forms.html
config/: settings.py  urls.py
src/: functions.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_is_verified_user_verification_code.py
users/templates/users/: login.html  recover_password.html  register.html  user_form.html  verify_email.html
