[tool.poetry]
name = "dz-20-1"
version = "0.1.0"
description = ""
authors = ["Sergius Art <xcxserj@mail.ru>"]
readme = "README.md"
packages = [{include = "dz_20_1"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.0"
ipython = "^8.15.0"
unidecode = "^1.3.6"
django-redis = "^5.4.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
